--- a/fp2024.cabal
+++ b/fp2024.cabal
@@ -39,6 +39,7 @@ library
       Lessons.Lesson12
       Lib1
       Lib2
+      Lib2NewParser
       Lib3
   other-modules:
       Paths_fp2024
@@ -71,9 +72,11 @@ executable fp2024-four-client
       base >=4.7 && <5
     , bytestring
     , fp2024
+    , free
     , lens
     , repline
     , string-conversions
+    , transformers
     , wreq
   default-language: Haskell2010
 
